wwwroot/css/site.css
@import url('font/quicksand.css');

body, html {
    height: 100%;
}

body {
    padding-top: 5rem;
    flex-direction: column;
    font-family: 'quicksand';
    overflow-y: hidden;
}

form {
    width: 100%;
}

.form-group.row > .col-form-label {
    text-align: right;
}

.top-bar {
    height: 5rem;
    background-color: rgb(192,0,0);
    background-image: linear-gradient(rgba(0,0,0,0.3) 0%, rgba(0,0,0,0.25) 25%, rgba(0,0,0,0) 70%);
    display: flex;
    align-items: stretch;
    color: white;
    box-shadow: 0 1px 3px rgba(0,0,0,0.4);
    padding: 0 3rem;
    position: fixed;
    top: 0;
    right: 0;
    left: 0;
    z-index: 1030;
}

.logo {
    display: flex;
}

    .logo > img {
        margin-right: 3rem;
        width: 9rem;
    }

.content {
    display: flex;
    height: 100%;
    z-index: 1;
    background-color: white;
}

.main {
    flex-grow: 1;
    overflow-y: auto;
    background: linear-gradient(rgba(0,0,0,0) 40%, rgba(0,0,0,0.4) 80%);
    padding: 1.5rem !important;
}

.nav-tab {
    margin: 0;
    padding: 0.3rem 1.8rem;
    display: inline-block;
    background-color: rgba(0,0,0,0.1);
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    font-size: 0.9rem;
    color: white;
    position: relative;
    text-transform: uppercase;
    transition: 0.2s ease-out;
}

    .nav-tab:hover {
        color: white;
        text-decoration: none;
        background-color: rgba(255,255,255,0.3);
    }

    .nav-tab.active {
        background-color: rgba(255,255,255,0.2);
        color: #fff2cc;
    }

    .nav-tab img {
        height: 2rem;
        margin-bottom: 0.25rem;
    }

    .nav-tab.active img {
        filter: brightness(0) saturate(100%) invert(93%) sepia(18%) saturate(797%) hue-rotate(316deg) brightness(109%) contrast(101%);
    }

    .nav-tab.active:after {
        content: "";
        position: absolute;
        bottom: -1rem;
        z-index: 1;
        width: 0px;
        height: 0px;
        border-left: 0.6rem solid transparent;
        border-right: 0.6rem solid transparent;
        border-top: 1rem solid rgb(205,51,51);
    }

.user-info {
    margin-left: auto;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
}

    .user-info img {
        margin-right: 0.7rem;
        width: 2.6rem;
    }

    .user-info .username {
        display: block;
        font-weight: 700;
        line-height: 0.7rem;
        margin-top: 0.5rem;
        color: white;
        font-size: 1rem;
    }

    .user-info a {
        color: #fff2cc;
        font-size: 0.8rem;
    }

    .user-info button.sign-out {
        color: #fff2cc;
        font-size: 0.8rem;
        padding: 0;
    }

.pizza-cards {
    display: grid;
    grid-template-columns: repeat(auto-fill, 20rem);
    grid-gap: 2rem;
    justify-content: center;
    padding-left: 0;
}

    .pizza-cards > li {
        height: 10rem;
        position: relative;
        background-size: cover;
        border-radius: 0.5rem;
        list-style-type: none;
        box-shadow: 0 3px 4px rgba(0,0,0,0.4);
        transition: 0.1s ease-out;
    }

        .pizza-cards > li:hover {
            transform: scale(1.02);
        }

.pizza-info {
    border-radius: 0.5rem;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    position: absolute;
    background: linear-gradient(rgba(0,0,0,0.7) 30%, rgba(0,0,0,0) 80%);
    padding: 1rem 1rem;
    color: #fff2cc;
    cursor: pointer;
    text-shadow: 0 2px 2px rgba(0,0,0,0.5);
    line-height: 1.25rem;
}

    .pizza-info .title {
        color: white;
        font-size: 1.4rem;
        display: block;
        margin: 0.2rem 0 0.4rem 0;
        font-family: 'Bahnschrift', Arial, Helvetica, sans-serif;
        text-transform: uppercase;
    }

    .pizza-info .price {
        position: absolute;
        bottom: 0.5rem;
        right: 1rem;
        font-size: 1.5rem;
        font-weight: 700;
        padding: 0rem 0.7rem;
        border-radius: 4px;
        background-color: #08af08;
        color: white;
        line-height: 2rem;
    }

.price::before {
    content: '$';
    font-weight: 300;
    font-size: 1.2rem;
    margin-right: 0.2rem;
}

.sidebar {
    background-color: #2b2b2b;
    width: 20rem;
    display: flex;
    flex-direction: column;
    color: white;
}

.order-contents {
    overflow-y: auto;
    padding: 2rem 1.5rem 1.5rem 1.5rem;
    flex-grow: 1;
}

    .order-contents h2 {
        color: #fff2cc;
        font-size: 1.3rem;
        font-weight: 300;
        margin-bottom: 1rem;
        font-family: 'Bahnschrift', Arial, Helvetica, sans-serif;
        text-transform: uppercase;
    }

.order-total {
    background-color: rgb(191, 52, 52);
    height: 4rem;
    flex-shrink: 0;
    display: flex;
    flex-direction: row;
    align-items: center;
    color: white;
    font-size: 1.2rem;
    transition: all 600ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
    padding: 0 1.5rem;
}

.order-total.hidden {
    transform: translate3d(0, 4rem, 0);
}

    .order-total .total-price {
        font-weight: 700;
        font-size: 1.5rem;
    }

        .order-total .total-price::before {
            content: '$';
            font-weight: 300;
            margin: 0 0.1rem 0 0.4rem;
        }

    .order-total .btn {
        margin-left: auto;
        font-weight: 700;
        border-radius: 20px;
        padding: 0.4rem 1.2rem;
    }

.checkout-button {
    margin: auto;
    display: block;
    font-weight: 700;
    border-radius: 20px;
    padding: 0.4rem 1.2rem;
}

.cart-item {
    background-color: #333333;
    padding: 0.8rem 1.2rem;
    border-radius: 6px;
    font-weight: 100;
    margin-top: 1rem;
    position: relative;
}

    .cart-item .title {
        font-weight: 700;
    }

    .cart-item ul {
        padding: 0;
        margin: 0.4rem 0.6rem;
    }

    .cart-item li {
        list-style-type: none;
        margin-left: 0rem;
        font-size: 0.8rem;
    }
/* ... */

